<resources>
    <string name="app_name">Samples4</string>
    <string name="first_activity">First Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="hello_world">Hello World!</string>
    <string name="pressName">Your Name:</string>
    <string name="pressAge">Your age:</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="empty_text" />
    <string name="contacts">Contacts</string>
    <string name="toast_short">Toast Short</string>
    <string name="toast_long">Toast_Long</string>
    <string name="log">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="writeName">Write Name</string>
    <string name="writeAge">Write age</string>
    <string name="writeLanguage">Write Language</string>
    <string name="pressLanguage">Your Language:</string>
    <string name="ok">Ok</string>
    <string name="ukraine">Українська</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="touch_me">Touch me</string>
    <string name="add_phone">Add Phone</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="pressNumber">Press Number</string>
    <string name="added">Added 0 numbers</string>
    <string name="throw_notification">Notification</string>
    <string name="secret">You know secret!</string>
    <string name="cancel">Cancel</string>
</resources>
