<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ukrainian"
        android:layout_width="wrap_content"
        android:onClick="chose"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ukraine" />

    <Button
        android:id="@+id/russian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chose"
        android:layout_weight="1"
        android:text="@string/russian" />

    <Button
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chose"
        android:layout_weight="1"
        android:text="@string/english" />
</LinearLayout>